adding crypto dep

--- a/imperative/package.json
+++ b/imperative/package.json
@@ -9,6 +9,7 @@
   "author": "Martin McKeaveney",
   "license": "ISC",
   "dependencies": {
+    "crypto": "^0.0.3",
     "request": "^2.79.0"
   }
 }
